feat(Problem5): solution 함수 구현